Добавляет проект на git

--- a/index.html
+++ b/index.html
@@ -935,7 +935,8 @@
             <button type="submit" class="modal__btn button">Order</button>
           </form>
         </div>
-    </div></section>
+    </div>
+  </section>
   </template>
   <script src="./main.min.js"></script>
 </body>
