Исправляет баг со схлопнувшимся списком

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                   <li>Child Under&nbsp;11 Years Stay Free</li>
                   <li>LUX* Me&nbsp;Spa</li>
                 </ul>
-                <ul class="features__list">
+                <ul class="features__list features__list--padding">
                   <li>Luxurious 5-Star Hotel</li>
                   <li>Banyan An&nbsp;Adult Only Zone</li>
                 </ul>
@@ -358,7 +358,7 @@
                   <li>Child Under&nbsp;11 Years Stay Free</li>
                   <li>LUX* Me&nbsp;Spa</li>
                 </ul>
-                <ul class="features__list">
+                <ul class="features__list features__list--padding">
                   <li>Luxurious 5-Star Hotel</li>
                   <li>Banyan An&nbsp;Adult Only Zone</li>
                 </ul>
@@ -478,7 +478,7 @@
                   <li>Child Under&nbsp;11 Years Stay Free</li>
                   <li>LUX* Me&nbsp;Spa</li>
                 </ul>
-                <ul class="features__list">
+                <ul class="features__list features__list--padding">
                   <li>Luxurious 5-Star Hotel</li>
                   <li>Banyan An&nbsp;Adult Only Zone</li>
                 </ul>
